dfir_rs/tests/snapshots/surface_examples__example_surface_flows_4_context.snap
---
source: hydroflow/tests/surface_examples.rs
expression: output
---
Current tick: [0], stratum: 0
